overflow kind of fixed

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+body {
+  margin: 0;
+  padding: 0;
+}
 * {
   font-family: "Roboto";
   /*outline: 2px solid red;*/
-  margin: 0;
 }
 .main {
   display: flex;
