--- a/src/styles/ShoppingCart.module.css
+++ b/src/styles/ShoppingCart.module.css
@@ -7,12 +7,13 @@
 .main * {
   background-color: white;
   z-index: 1100;
+  outline: 2px solid red;
 }
 
 .shade {
   background-color: black;
   opacity: 0.6;
-  width: 80vw;
+  width: 77vw;
   min-height: 100vh;
   margin: 0;
 }
